# oci-fsspec

./: .gitignore  Makefile  README.md  pyproject.toml
docs/: README.md  abstract_buffered_file_methods.html  abstract_filesystem_methods.html  oci-fsspec.drawio
ocifsspec/: __init__.py
ocifsspec/core/auth/: __init__.py  session_token_authentication.py  user_token_authentication.py
ocifsspec/core/exceptions/: invalid_path_error.py  oci_authentication_error.py
ocifsspec/core/impl/: oci_object_storage_file_system.py  oci_object_storage_file_system_async.py
ocifsspec/core/models/: constants.py  copy_response.py  object_storage_name.py
ocifsspec/core/oci_object_storage/: object_storage_client.py
